feat: gemini image audio video support
